--- a/client/makefile
+++ b/client/makefile
@@ -4,6 +4,9 @@ OBJDIR = obj
 OBJFILES = client.o
 OBJ = $(patsubst %,$(OBJDIR)/%,$(OBJFILES))
 
+.PHONY: all
+all: client
+
 $(OBJDIR)/%.o: %.cpp $(DEPS)
 	g++ -c -o $@ $<
 
@@ -12,4 +15,4 @@ client: $(OBJ)
 
 .PHONY: clean
 clean:
-	rm -f $(OBJDIR)/*.o
+	rm -f $(OBJDIR)/*.o client
