--- a/server/makefile
+++ b/server/makefile
@@ -4,6 +4,9 @@ OBJDIR = obj
 OBJFILES = server.o args_parser.o qr_decoder.o
 OBJ = $(patsubst %,$(OBJDIR)/%,$(OBJFILES))
 
+.PHONY: all
+all: QRServer
+
 $(OBJDIR)/%.o: %.cpp $(DEPS)
 	g++ -c -o $@ $<
 
@@ -12,4 +15,4 @@ QRServer: $(OBJ)
 
 .PHONY: clean
 clean:
-	rm -f $(OBJDIR)/*.o
+	rm -f $(OBJDIR)/*.o QRServer
